<resources>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="app_name">Saleem</string>
    <string name="action_sign_in">Sign in</string>
    <string name="signUp">Sign up</string>
    <string name="login_btn">Login</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="enteryourEmail">Enter your Email</string>
    <string name="forgetPassword">Forget Password</string>
    <string name="createAccount">Create Account</string>

    <string name="AreyousureLogout">Are you sure you want to Logout?</string>
    <string name="enteryourName">Enter your Name</string>
    <string name="enteryourPass">Enter your Password</string>
    <string name="enteryourCPass">Confirm Password</string>
    <string name="Register">Register</string>
    <string name="NoresultData">No result data</string>
    <string name="Thankyou">Thank you</string>
    <string name="cancel">Cancel</string>

    <string name="male">male</string>

    <string name="female">female</string>
    <string name="add_snack">اضافة وجبة خفيفة</string>
    <string name="add_dinner">اضافة عشاء</string>
    <string name="add_lunch">اضافة غداء</string>
    <string name="add_breakfast">اضافة فطور</string>

    <string-array name="Quantities">
        <item>مل</item>
        <item>كأس</item>
        <item>جم</item>
        <item>ملعقة طعام كبيرة</item>
        <item>ملعقة صغيرة</item>
    </string-array>
    <string-array name="Ingredients">
        <item>رز أبيض</item>
        <item>رز أسمر </item>
        <item>موزة</item>
        <item>تفاح</item>
        <item>لبن</item>
        <item>حليب</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
