<?xml version="1.0" encoding="UTF-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:layout_marginTop="100dp">


        <TextView
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_btn"
            android:textColor="@color/colorPrimary"
            android:textSize="44dp"
            android:textStyle="bold" />



        <LinearLayout
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_marginTop="70dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:errorEnabled="true">

                <AutoCompleteTextView
                    android:id="@+id/emailET"
                    android:layout_width="292dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="15dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:errorEnabled="true">

                <AutoCompleteTextView
                    android:id="@+id/passwordED"
                    android:layout_width="296dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="-11dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="15dp"
                    app:passwordToggleEnabled="true"

                    />

            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:id="@+id/loginBtn"
                android:layout_width="354dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:background="@color/colorPrimary"
                android:textColor="#fff"
                android:text="@string/login_btn"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/singUpBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#535252"
                android:text="@string/signUp"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/forgetText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgetPassword"
                android:textColor="@color/colorPrimaryDark"/>



        </LinearLayout>


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>